# spinifel

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  0001-fix-build-script-on-psbuild.patch  LICENSE  README.md  _idea_use_other_spi_pkgs.py  _more_features.py  legion_main.py  main.py  mpi_main.py  parms.py  sequential_main.py  submit_benchmark_basic_series.sh  submit_cori_gpu.sh  submit_cori_gpu_legion.sh  submit_crusher.sh  submit_crusher_petermc.sh  submit_frontier_petermc.sh  submit_network_prior.sh  submit_network_prior_clipping.sh  submit_network_prior_clipping_test.sh  submit_network_prior_series.sh  submit_perlmutter.sh  submit_perlmutter_final_demo.sh  submit_perlmutter_final_demo_strong_scaling.sh  submit_perlmutter_legion.sh  submit_pm.sh  submit_summit.sh  test_legion_demo23.sh  test_main.sh  wrap_submit_clean_test_nochk_ensemble_legion.sh  wrap_submit_pm_ensemble.sh
.ipynb_checkpoints/: submit_network_prior-checkpoint.sh  submit_network_prior_series-checkpoint.sh
eval/: __main__.py  align.py  config.py  fsc.py  geom.py
legion_mapper/: CMakeLists.txt  lifeline_mapper.cc  lifeline_mapper.h  main.cc  simple_mapper.cc  simple_mapper.h
mpi4py_poison_wrapper/: mpi4py.py
scripts/: README.md  ci.sh  combine_h5files.py  copy_data.sh  fix_lib_olcf.sh  parseOutput.py  reset_submodules.sh  run_cori.sh  run_iris.sh  run_pm.sh  run_summit.sh  run_summit_mpi.sh  run_summit_mult.sh  run_summit_mult_nodes_ensemble_legion.sh  run_summit_nsight.sh  run_tulip.sh  run_with_backtrace.sh  submit_cori_gpu.sh  submit_create_demo23_data.sh  test.sh  (+1 more)
(+149 files in other folders)
